syntax = "proto3";
package cosmos.params.v1beta1;

option go_package            = "github.com/cosmos/cosmos-sdk/x/params/types";
option (gogoproto.equal_all) = true;

import "gogoproto/gogo.proto";

// ParamChange defines an individual parameter change, for use in
// ParameterChangeProposal.
message ParamChange {
  option (gogoproto.goproto_stringer) = false;

  string subspace = 1;
  string key      = 2;
  string value    = 3;
}
